decidim-admin/app/packs/stylesheets/decidim/admin/_redesigned_cards.scss
.card{
  @apply bg-transparent border-0;

  .table-scroll{
    @apply bg-white rounded;
  }

  .table{
    @apply w-full;
  }

  .card-divider .card-title{
    @apply flex items-center;

    .button{
      @apply ml-auto;
    }
  }
}

.card-title{
  @apply text-md w-full text-gray-2 font-semibold;

  &--nocaps{
    @apply lowercase tracking-normal;

    &::first-letter{
      @apply lowercase;
    }
  }

  .data-picker{
    font-weight: normal;
    letter-spacing: 0;
    margin-bottom: 0;
    text-transform: none;
  }

  .button--title{
    @apply flex justify-end gap-x-4 items-center;
    .dropdown,
    &.dropdown{
      @apply relative;
    }
  }
}

.card-footer{
  padding: 1rem;
  border-top: 1px solid rgba(black, .1);

  .button--remove{
    margin-left: auto;
  }
}

.card--list__item{
  display: flex;
  align-items: center;
  padding-left: 1rem;

  .card--list--mini &{
    padding-left: 1rem;
  }
}

.card--list__icon{
  display: none;
  fill: currentColor;
}

.card--list__text{
  flex-grow: 1;
  flex-shrink: 1;
  display: inline-flex;
  overflow: hidden;
  align-items: center;
  padding: 1rem 1rem 1rem 0;

  .card--list--mini &{
    padding: .5rem .5rem .5rem 0;
  }

  .author{
    margin-top: .3rem;
    margin-right: 1rem;
  }
}

.card--list__heading{
  margin-bottom: 0;
  display: block;
}

.card-divider{
  @apply bg-transparent px-0 py-2;
}

.card.with-overflow{
  overflow: visible;
}

.card-section{
  @apply pb-4 bg-white;

  svg{
    @apply w-4 h-4 inline-block fill-secondary;
  }
}

.card-section-draggable-list{
  .grid-x.grid-margin-x.card-grid{
    @apply grid grid-cols-1 md:grid-cols-2 gap-4;

    .cell{
      @apply w-full;
    }
  }

  .cell,
  .card,
  .card-section{
    @apply h-full;
  }

  .draggable-list {
    @apply p-0 m-0 list-none h-full;

    &-title{
      @apply text-lg font-semibold;
    }

    &.dragging {
      @apply border-dashed border-y-2 border-gray;
    }

    li {
      @apply cursor-move py-2;
    }

    .draggable-content {
      @apply flex justify-between items-center font-semibold py-2 px-4 rounded bg-gray;
    }
  }
}

